// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReportPost - Snapshots > matches snapshot for issue selection step 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 m-4 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] gap-6 overflow-y-auto rounded-lg border bg-background p-6 shadow-lg sm:rounded-xl sm:p-8 w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-issue-step"
    >
      DialogReportPostIssueStep
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`DialogReportPost - Snapshots > matches snapshot for reason step 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 m-4 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] gap-6 overflow-y-auto rounded-lg border bg-background p-6 shadow-lg sm:rounded-xl sm:p-8 w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-reason-step"
    >
      <button
        data-testid="back-button"
      >
        Back
      </button>
      <button
        data-testid="submit-button"
      >
        Submit
      </button>
      DialogReportPostReasonStep
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`DialogReportPost - Snapshots > matches snapshot for success state 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 m-4 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] gap-6 overflow-y-auto rounded-lg border bg-background p-6 shadow-lg sm:rounded-xl sm:p-8 w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-success"
    >
      DialogReportPostSuccess
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;
